# ppf.jabref

./: .gitignore  LICENSE  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
docs/: CONTRIBUTING.md  README.md  README_pypi.md
docs/dev/: DEV_DOCS.md  release_process.md
pyjabref/: jabref.py
src/ppf/jabref/: __init__.py  jabref.py  utils.py
tests/: test_File.py  test_Link.py  test_citationkeymapping.py  test_split_by_unescaped_sep.py
