[metadata]
name = ppf-jabref
version = 0.1.0
description = Python tools to work with JabRef libraries
long_description = file: docs/README_pypi.md
long_description_content_type = text/markdown
url = https://github.com/adrianschlatter/ppf.jabref/tree/master
author = Adrian Schlatter
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = jabref, python, sqlalchemy

[options]
package_dir = 
	= src
packages = find_namespace:
# no python3.5 because we need f-strings:
python_requires = >=3.6
install_requires = sqlalchemy

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using
# pip install -e .[dev,test]
test =
    flake8
    check-manifest
    pytest
    coverage
dev =
    tox
    twine

[tool:pytest]
testpaths =
    tests

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**

